raw-manifests/local-production/minio/virtual-service-api.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: minio-api-prod-vs
  namespace: istio-system
spec:
  hosts:
    - "api.minio.prod.local"
  gateways:
    - istio-ingressgateway-production
  http:
    - route:
        - destination:
            host: minio.minio.svc.cluster.local
            port:
              number: 443
