raw-manifests/local-production/minio/virtual-service-ui.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: minio-ui-prod-vs
  namespace: istio-system
spec:
  hosts:
    - "minio.prod.local"
  gateways:
    - istio-ingressgateway-production
  http:
    - route:
        - destination:
            host: minio-production-console.minio.svc.cluster.local
            port:
              number: 9443
---
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: minio-console-prod-dr
  namespace: istio-system
spec:
  host: minio-production-console.minio.svc.cluster.local
  trafficPolicy:
    tls:
      mode: SIMPLE
